--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rozha+One&display=swap" rel="stylesheet">
         <title>AG website</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -50,15 +53,8 @@
                 {{plist}}
             </div>
 
-            <div class="text-center">
-                <button type="button" class="btn btn-secondary btn-lg">
-                    Get in touch
-                </button>     
-                <p>
-                    Copyright 2024, AG
-                </p>          
-            </div>
 
         </div>
+        {% include 'footer.html' %}
     </body>
 </html>
