--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,4 @@
-<nav class="py-2 bg-body-tertiary border-bottom">
+<nav class="py-2 bg-body-tertiary border-bottom shadow-sm fixed-top">
     <div class="container d-flex flex-wrap">
       <ul class="nav me-auto">
         <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-6 active" aria-current="page">Alok</a></li>
@@ -10,3 +10,4 @@
       </ul>
     </div>
   </nav>
+  <div style="height:56px"></div>
